--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,17 @@
 
   <body>
     <% if user_signed_in? %>
-      <h1>Welcome, <%= current_user.email %></h1>
-      <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'button' %>
+      <div class="user-info">
+        <h1>Welcome, <%= current_user.email %></h1>
+        <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
+      </div>
     <% else %>
-      <%= link_to 'Login', new_user_session_path %> or
-      <%= link_to 'Sign Up', new_user_registration_path %>
+      <div class="user-actions">
+        <%= link_to 'Login', new_user_session_path %> or
+        <%= link_to 'Sign Up', new_user_registration_path %>
+      </div>
     <% end %>
+
     <br>
     <%= link_to 'Home', root_path %>
     <p class="notice"><%= notice %></p>
