--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Discussions#index</h1>
-<p>Find me in app/views/discussions/index.html.erb</p>
+<h1>Discussions</h1>
+
+<% @discussions.each do |discussion| %>
+    <div class="discussion">
+        <h2><%= link_to discussion.title, discussion %></h2>
+        <small><%= discussion.description %></small>
+        <p>Posted by <%= discussion.user.username %> on <%= discussion.created_at.strftime("%d %B, %Y at %H:%M") %></p>
+            </div>
+<% end %>
+
+<%= link_to "New Discussion", new_discussion_path %>
