--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <% if user_signed_in? %>
       <div class="user-info">
-        <h1>Welcome, <%= current_user.email %></h1>
+        <h1>Welcome, <%= current_user.username %></h1>
         <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
       </div>
     <% else %>
