--- a/app/views/discussions/_form.html.erb
+++ b/app/views/discussions/_form.html.erb
@@ -12,8 +12,8 @@
     </div>
 
     <div>
-        <%= f.label :attachment, "Drag an drop" %>
-        <%= f.file_field :attachment, multiple: true %>
+        <%= f.label :attachments, "Drag and drop" %>
+        <%= f.file_field :attachments, multiple: true %>
     </div>
 
     <div>
