--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+ /* .image-container {
+     width: 200px;
+     height: 200px;
+     overflow: hidden;
+ } */
+ 
+.thumbnail-image {
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.image-container {
+  display: inline-block;
+  /* Add any additional styling you need */
+}
