--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,10 +1,16 @@
 <h1>Discussions</h1>
 
-<% @discussions.each do |discussion| %>
+<% @discussions.sort_by { |discussion| discussion.posts.last&.created_at || discussion.created_at }.reverse.each do |discussion| %>
     <div class="discussion">
         <h2><%= link_to discussion.title, discussion %></h2>
         <small><%= discussion.description %></small>
-        <p>Posted by <%= discussion.user.username %> on <%= discussion.created_at.strftime("%d %B, %Y at %H:%M") %></p>
+        <p>Posted by <%= link_to discussion.user.username, profile_path(discussion.user) %> on <%= discussion.created_at.strftime("%d %B, %Y at %H:%M") %></p>
+        <% if discussion.posts.any? %>
+            <p>Last Post: <%= discussion.posts.last.created_at.strftime("%d %B, %Y at %H:%M") %></p>
+        <% else %>
+            <p>Last Post: <%= discussion.created_at.strftime("%d %B, %Y at %H:%M") %></p>
+        <% end %>
+        <p>Replies: <%= discussion.posts.count %></p>
             </div>
 <% end %>
 
