--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,120 @@
-<h2>Sign up</h2>
+<style>
+  .signup-container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 25px;
+    border: 1px solid #e48c1a;
+    border-radius: 5px;
+    position: relative;
+  }
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  .signup-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/signup.jpg");
+    background-size: cover;
+    background-position: center;
+    filter: blur(0.5px);
+    z-index: -1;
+  }
+  
+  .signup-title {
+    color: #e77d03;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .field {
+    color: #ffa227;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .field label {
+    font-weight: bold;
+  }
+  
+  .field input[type="text"],
+  .field input[type="email"],
+  .field input[type="password"] {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #eb8b0f;
+    border-radius: 10px;
+  }
+  
+  .actions {
+    text-align: center;
+  }
+  
+  .actions input[type="submit"] {
+    padding: 10px 20px;
+    background-color: #c76329;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .actions:hover input[type="submit"] {
+    background-color: #ff6600;
+  }
+  
+  .signup-links {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .signup-links a {
+    color: #e25716;
+    text-decoration: underline;
+  }
+</style>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autocomplete: "username" %>
-    <% if resource.errors.has_key?(:username) %>
-      <span class="error"><%= resource.errors[:username].first %></span>
-    <% end %>
+<div class="signup-container">
+  <h2 class="signup-title">Sign up</h2>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+
+    <div class="field">
+      <%= f.label :username %><br />
+      <%= f.text_field :username, autocomplete: "username" %>
+      <% if resource.errors.has_key?(:username) %>
+        <span class="error"><%= resource.errors[:username].first %></span>
+      <% end %>
+    </div>
+
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
+  
+  <div class="signup-links">
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
