--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,17 +1,20 @@
-<h1>Discussions</h1>
+<div class="container">
+  <h1>Discussions</h1>
 
-<% @discussions.sort_by { |discussion| discussion.posts.last&.created_at || discussion.created_at }.reverse.each do |discussion| %>
+  <% @discussions.sort_by { |discussion| discussion.posts.last&.created_at || discussion.created_at }.reverse.each do |discussion| %>
     <div class="discussion">
-        <h2><%= link_to discussion.title, discussion %></h2>
-        <small><%= discussion.description %></small>
-        <p>Posted by <%= link_to discussion.user.username, profile_path(discussion.user) %> on <%= discussion.created_at.strftime("%d %B, %Y at %I:%M %p") %></p>
-        <% if discussion.posts.any? %>
-            <p>Last Post: <%= discussion.posts.last.created_at.strftime("%d %B, %Y at %I:%M %p") %></p>
-        <% else %>
-            <p>Last Post: <%= discussion.created_at.strftime("%d %B, %Y at %I:%M %p") %></p>
-        <% end %>
-        <p>Replies: <%= discussion.posts.count %></p><hr>
+      <h2 class="discussion-title"><%= link_to discussion.title, discussion, class: "discussion-link" %></h2>
+      <small class="discussion-description"><%= discussion.description %></small>
+      <p class="discussion-meta">Posted by <%= link_to discussion.user.username, profile_path(discussion.user), class: "discussion-link" %> on <%= discussion.created_at.strftime("%d %B, %Y at %I:%M %p") %></p>
+      <% if discussion.posts.any? %>
+        <p class="discussion-meta">Last Post: <%= discussion.posts.last.created_at.strftime("%d %B, %Y at %I:%M %p") %></p>
+      <% else %>
+        <p class="discussion-meta">Last Post: <%= discussion.created_at.strftime("%d %B, %Y at %I:%M %p") %></p>
+      <% end %>
+      <p class="discussion-meta">Replies: <%= discussion.posts.count %></p>
+      <hr class="discussion-separator">
     </div>
-<% end %>
+  <% end %>
 
-<%= link_to "New Discussion", new_discussion_path %>
+  <%= link_to "New Discussion", new_discussion_path, class: "new-discussion-link" %>
+</div>
