--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,55 +9,6 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
-    <style>
-.top-bar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #272222;
-        padding: 10px;
-        margin-bottom: 20px;
-        z-index: 9999;
-      }
-
-      .top-bar h2 {
-        margin: 0;
-        font-size: 24px;
-        color: #dac4c4;
-      }
-
-      .dropdown-menu {
-        position: relative;
-        display: inline-block;
-      }
-
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #423d3e;
-        box-shadow: 0px 8px 19px 0px rgb(175, 78, 22);
-        min-width: 160px;
-        z-index: 1;
-        padding: 8px 0;
-        border-radius: 4px;
-      }
-
-      .dropdown-content a {
-        color: rgb(255, 255, 255);
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-      }
-
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
-      
-    </style>
   </head>
 
   <body>
@@ -74,10 +25,10 @@
         <% if user_signed_in? %>
           <div class="user-info">
             <div class="dropdown">
-              <button class="btn btn-primary">
-                Welcome, <%= current_user.username %>
+              <button class="circle-button">
+                <%= current_user.username %>
               </button>
-              <div class="dropdown-content">
+              <div class="dropdown-content" style="right: 1px;">
                 <%= link_to 'Go to Profile', profile_path(current_user) %>
                 <%= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete} %>
               </div>
