--- a/app/views/discussions/_form.html.erb
+++ b/app/views/discussions/_form.html.erb
@@ -1,3 +1,5 @@
+<title>Edit Discussion</title>
+
 <h1>Create a new discussion</h1>
 
 <%= form_for @discussion, html: { class: "discussion-form" } do |f| %>
