--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,5 @@
+<title>Profile</title>
+
 <div class="profile-box">
     <h1 class="profile-heading">Profile</h1>
     <p class="profile-info">Name: <%= @user.username %></p>
