--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,3 +1,5 @@
+<title>Discussion Details</title>
+
 <div class="discussion-box">
   <h2 id="discussion-<%= @discussion.id %>" class="discussion-title"><%= @discussion.title %></h2>
   <div class="discussion-metadata">
