--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,3 +1,5 @@
+<title>Homepage</title>
+
 <div class="homepage-container">
   <div class="homepage-box">
     <h2 class="homepage-heading">This is the homepage</h2>
