--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,3 +1,5 @@
+<title>Edit Profile</title>
+
 <h1 class="edit-profile-heading">Edit Profile</h1>
 
 <%= form_for @user, url: profile_path, method: :patch, html: { class: "profile-form" } do |f| %>
