--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="homepage-container">
   <div class="homepage-box">
-    <h2 class="homepage-heading">This is the homepage</h2>
+    <h2 class="homepage-heading">Homepage</h2>
     <div class="homepage-line"></div>
     <div>
       <%= link_to "Go to discussions", discussions_path, class: "homepage-button" %>
