CSS for the form and some changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -148,6 +148,81 @@ body a {
  /* homepages/index.html.erb */
  /* homepages all Done */
 
+ /* discussions/_form.html.erb */
+ .discussion-title {
+  color: #ffa023;
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.back-link {
+  display: block;
+  width: 120px;
+  height: 40px;
+  background-color: #ff6600;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  line-height: 40px;
+  margin: 0 auto;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.back-link:hover {
+  background-color: #ff8725;
+}
+
+.discussion-form {
+  width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.form-label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #ff6600;
+  border-radius: 4px;
+}
+
+.form-textarea {
+  height: 150px;
+  resize: none;
+}
+
+.form-submit-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #ff6600;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.form-submit-button:hover {
+  background-color: #ff8725;
+}
+ /* discussions/_form.html.erb */
+ 
  /* discussions/index.html.erb */
  .container {
   max-width: 800px;
