--- a/app/views/discussions/_form.html.erb
+++ b/app/views/discussions/_form.html.erb
@@ -1,24 +1,32 @@
-<title>Edit Discussion</title>
-
-<h1>Create a new discussion</h1>
+<% if @discussion.persisted? %>
+  <h1 class="discussion-title">Edit Discussion</h1>
+<% else %>
+  <h1 class="discussion-title">Create a new discussion</h1>
+<% end %>
 
 <%= form_for @discussion, html: { class: "discussion-form" } do |f| %>
-    <div>
-        <%= f.label :title, "Title:" %>
-        <%= f.text_field :title, placeholder: "Enter title" %>
-    </div>
+  <div class="form-group">
+    <%= f.label :title, "Title:" %>
+    <%= f.text_field :title, placeholder: "Enter title", class: "form-input" %>
+  </div>
 
-    <div>
-        <br>
-        <%= f.text_area :description, placeholder: "Description...", style: "height: 136px; width: 337px"  %>
-    </div>
+  <div class="form-group">
+    <%= f.label :description, "Description:" %>
+    <%= f.text_area :description, placeholder: "Enter description", class: "form-textarea" %>
+  </div>
 
-    <div>
-        <%= f.label :attachments, "Drag and drop" %>
-        <%= f.file_field :attachments, multiple: true %>
-    </div>
+  <div class="form-group">
+    <%= f.label :attachments, "Click or Drag to Upload Files:" %>
+    <%= f.file_field :attachments, multiple: true, class: "form-input" %>
+  </div>
 
-    <div>
-        <%= f.submit "Create Discussion" %>
-    </div>
+  <div class="form-group">
+    <% if @discussion.persisted? %>
+        <%= link_to "Back", discussion_path, class: "back-link" %>
+        <%= f.submit "Edit Discussion", class: "form-submit-button" %>
+    <% else %>
+        <%= link_to "Back", discussions_path, class: "back-link" %>
+        <%= f.submit "Create Discussion", class: "form-submit-button" %>
+    <% end %>
+  </div>
 <% end %>
