--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -5,7 +5,8 @@
     <h2 class="homepage-heading">Homepage</h2>
     <div class="homepage-line"></div>
     <div>
-      <%= link_to "Go to discussions", discussions_path, class: "homepage-button" %>
+      <%= link_to "General Discussion", general_discussions_path, class: "homepage-button" %> <br>
+      <%= link_to "Strategies Discussion", strategies_path, class: "homepage-button" %>
     </div>
   </div>
 </div>
