--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,13 +3,13 @@
 <div class="profile-box">
     <h1 class="profile-heading">Profile</h1>
     <p class="profile-info">Name: <%= @user.username %></p>
-    
+
     <%= link_to "Edit", edit_profile_path(@user), class: "edit-link" if current_user == @user %>
 </div>
 
-<h2 class="discussion-heading">Discussions</h2>
+<h2 class="discussion-heading">General Discussions</h2>
 <ul class="discussion-list">
-    <% @user.discussions.each do |discussion| %>
+    <% @user.discussions.where(category: 'discussions').each do |discussion| %>
     <li class="discussion-item">
         <div class="discussion-box">
             <strong class="discussion-title">Title:</strong>
@@ -20,9 +20,36 @@
     <% end %>
 </ul>
 
-<h2 class="post-heading">Posts</h2>
+<h2 class="discussion-heading">Strategies</h2>
+<ul class="discussion-list">
+    <% @user.discussions.where(category: 'strategies').each do |discussion| %>
+    <li class= "discussion-item">
+        <div class="discussion-box">
+            <strong class="discussion-title">Title:</strong>
+            <%= link_to discussion.title, discussion_path(discussion), class: "discussion-link" %><br>
+            <strong class="discussion-owner">Owner:</strong> <%= discussion.user.username %>
+        </div>
+    </li>
+    <% end %>
+</ul>
+
+<h2 class="post-heading">General Discussion Posts</h2>
 <ul class="post-list">
-    <% @user.posts.each do |post| %>
+    <% @user.posts.joins(:discussion).where("discussions.category = 'discussions'").each do |post| %>
+    <li class="post-item">
+        <div class="post-box">
+            <strong class="post-discussion-title">Discussion Title:</strong>
+            <%= link_to post.discussion.title, discussion_path(post.discussion), class: "discussion-link" %><br>
+            <strong class="post-content">Content:</strong> <%= post.content %><br>
+            <strong class="post-owner">Owner:</strong> <%= post.user.username %>
+        </div>
+    </li>
+    <% end %>
+</ul>
+
+<h2 class="post-heading">Strategy Discussion Posts</h2>
+<ul class="post-list">
+    <% @user.posts.joins(:discussion).where("discussions.category = 'strategies'").each do |post| %>
     <li class="post-item">
         <div class="post-box">
             <strong class="post-discussion-title">Discussion Title:</strong>
