--- a/app/views/discussions/general_discussions/show.html.erb
+++ b/app/views/discussions/general_discussions/show.html.erb
@@ -3,6 +3,11 @@
 <div class="discussion-box">
   <h2 id="discussion-<%= @discussion.id %>" class="discussion-title"><%= @discussion.title %></h2>
   <div class="discussion-metadata">
+    <% if @discussion.user.profile_picture.attached? %>
+      <%= image_tag @discussion.user.profile_picture, class: "profile-picture" %>
+    <% else %>
+      <%= image_tag "ProfilePic.jpg", class: "profile-picture" %>
+    <% end %>
     <p class="discussion-creator">Created by: <%= link_to @discussion.user.username, profile_path(@discussion.user) %></p>
     <p>Created <%= time_ago_in_words(@discussion.created_at) %> Ago</p>
     <p>Last updated: <%= time_ago_in_words(@discussion.updated_at) %></p>
@@ -14,7 +19,7 @@
     <% end %>
   </div>
   <hr>
-  <p class="discussion-description"><%= @discussion.description %></p>
+  <p class="discussion-description"><%= simple_format(@discussion.description) %></p>
 
   <% if @discussion.attachments.attached? %>
     <div class="discussion-attachments">
@@ -37,9 +42,14 @@
 <div class="discussion-posts">
   <% @discussion.posts.order(:created_at).each_with_index do |post, index| %>
     <div id="post-<%= post.id %>" class="post-box">
+      <% if post.user.profile_picture.attached? %>
+        <%= image_tag post.user.profile_picture, class: "profile-picture" %>
+      <% else %>
+        <%= image_tag "ProfilePic.jpg", class: "profile-picture" %>
+      <% end %>
       <a href="#post-<%= post.id %>" class="post-number">#<%= index + 1 %></a>
       <p class="post-username">Posted by: <%= link_to post.user.username, profile_path(post.user) %></p>
-      <p class="post-content"><%= post.content %></p>
+      <p class="post-content"><%= simple_format(post.content) %></p>
       <p class="post-created-at">Created <%= time_ago_in_words(post.created_at) %> Ago</p>
       <p class="post-updated-at">Last updated: <%= time_ago_in_words(post.updated_at) %></p>
     </div>
@@ -48,7 +58,7 @@
 
 <% if current_user %>
   <%= form_with(model: [ @discussion, @discussion.posts.build ], url: discussion_posts_path(@discussion), local: true, class: "new-post-form") do |form| %>
-    <%= form.text_area :content, placeholder: "Enter your thread content", class: "post-content-input" %>
+    <%= form.text_area :content, placeholder: "Enter your thread content", class: "post-content-input", rows: 4 %>
     <%= form.submit "Post Thread", class: "post-submit-button" %>
   <% end %>
 <% else %>
