--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -31,7 +31,7 @@
     <li class= "discussion-item">
         <div class="discussion-box">
             <strong class="discussion-title">Title:</strong>
-            <%= link_to discussion.title, discussion_path(discussion), class: "discussion-link" %><br>
+            <%= link_to discussion.title, strategy_path(discussion), class: "discussion-link" %><br>
             <strong class="discussion-owner">Owner:</strong> <%= discussion.user.username %>
         </div>
     </li>
@@ -43,9 +43,9 @@
     <% @user.posts.joins(:discussion).where("discussions.category = 'discussions'").each do |post| %>
     <li class="post-item">
         <div class="post-box">
-            <strong class="post-discussion-title">Discussion Title:</strong>
-            <%= link_to post.discussion.title, discussion_path(post.discussion), class: "discussion-link" %><br>
-            <strong class="post-content">Content:</strong> <%= post.content %><br>
+            <strong class="post-discussion-title">Title:</strong>
+            <%= link_to post.discussion.title, general_discussion_path(post.discussion), class: "discussion-link" %><br>
+            <strong class="post-content">Content:</strong> <%= simple_format(post.content) %><br>
             <strong class="post-owner">Owner:</strong> <%= post.user.username %>
         </div>
     </li>
@@ -57,9 +57,9 @@
     <% @user.posts.joins(:discussion).where("discussions.category = 'strategies'").each do |post| %>
     <li class="post-item">
         <div class="post-box">
-            <strong class="post-discussion-title">Discussion Title:</strong>
-            <%= link_to post.discussion.title, discussion_path(post.discussion), class: "discussion-link" %><br>
-            <strong class="post-content">Content:</strong> <%= post.content %><br>
+            <strong class="post-discussion-title">Title:</strong>
+            <%= link_to post.discussion.title, strategy_path(post.discussion), class: "discussion-link" %><br>
+            <strong class="post-content">Content:</strong> <%= simple_format(post.content) %><br>
             <strong class="post-owner">Owner:</strong> <%= post.user.username %>
         </div>
     </li>
