--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -6,7 +6,7 @@
     <div class="homepage-line"></div>
     <div>
       <%= link_to "General Discussion", general_discussions_path, class: "homepage-button" %> <br>
-      <%= link_to "Strategies Discussion", strategies_path, class: "homepage-button" %>
+      <%= link_to "Strategies", strategies_path, class: "homepage-button" %> <br>
     </div>
   </div>
 </div>
