--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,12 +104,12 @@ body a {
  /* layouts all Done */
 
  /* homepages/index.html.erb */
- .homepage-container {
+.homepage-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
+  height: 35vh;
 }
 
 .homepage-box {
@@ -150,6 +150,39 @@ body a {
 
 .homepage-button:hover {
   background-color: #ff6600;
+}
+
+.events-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 50vh;
+  margin-top: 20px;
+}
+
+.events-box {
+  width: 40%;
+  padding: 3%;
+  position: relative;
+  margin: 0 auto;
+  background-color: #414141;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.events-heading {
+  color: #ddd;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.events-line {
+  width: 100%;
+  height: 1px;
+  background-color: #ddd;
+  margin-bottom: 20px;
 }
  /* homepages/index.html.erb */
  /* homepages all Done */
