Added event content

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -10,3 +10,13 @@
     </div>
   </div>
 </div>
+
+<div class="events-container">
+  <div class="events-box">
+    <h2 class="events-heading">Events</h2>
+    <div class="events-line"></div>
+    <div>
+      <%= link_to "Events", events_path, class: "homepage-button" %>
+    </div>
+  </div>
+</div>
