--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,23 +1,4 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- /* .image-container {
-     width: 200px;
-     height: 200px;
-     overflow: hidden;
- } */
 /* layouts/application.html.erb */
 body {
   padding-top: 70px;
@@ -587,7 +568,7 @@ body a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/signup.jpg");
+  background-image: image-url("signup.jpg");
   background-size: cover;
   background-position: center;
   filter: blur(0.5px);
