--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -651,7 +651,7 @@ body a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/login.jpg");
+  background-image: image-url("login.jpg");
   background-size: cover;
   background-position: center;
   filter: blur(1px);
